--- a/deliverables/contribution.tex
+++ b/deliverables/contribution.tex
@@ -10,10 +10,10 @@
 \begin{tabular}{ l l l }
 \textbf{Name} & \textbf{GitHub Handle} & \textbf{Tasks \& Hours (Estimated)} \\
 \hline
-Royce Nguyen & @your-username & Backend auth & 12h \\
+Teammate 1 & @your-username & Backend auth & 12h \\
 Teammate 2 & @teammate2 & Frontend forms/UI & 12h \\
 Teammate 3 & @teammate3 & Integration & 12h \\
-You (Member D) & @your-username & Docs, QA, LaTeX & 12h \\
+Royce Nguyen & @Royce-n & Docs, QA, LaTeX & 12h \\
 \end{tabular}
 
 \vspace{1cm}
