--- a/deliverables/contribution.tex
+++ b/deliverables/contribution.tex
@@ -20,9 +20,9 @@ Royce Nguyen & @Royce-n & Docs, QA, LaTeX & 12h \\
 \textbf{Signatures (electronic image or typed name):}
 
 \bigskip
-Royce Nguyen: \rule{6cm}{0.4pt} \\
+Teammate 1: \rule{6cm}{0.4pt} \\
 Teammate 2: \rule{6cm}{0.4pt} \\
 Teammate 3: \rule{6cm}{0.4pt} \\
-Member D: \rule{6cm}{0.4pt}
+Royce Nguyen: \rule{6cm}{0.4pt}
 
 \end{document}
