--- a/backend/latex/templates/general_petition.tex
+++ b/backend/latex/templates/general_petition.tex
@@ -18,7 +18,7 @@
 \renewcommand{\headrulewidth}{0.5pt}
 \fancyhead[L]{\small GENERAL PETITION}
 \fancyhead[C]{\small University of Houston\\Registration and Academic Records\\(713) 743-1010}
-\fancyhead[R]{\textbf{\large UH}}
+\fancyhead[R]{\includegraphics[height=0.6in]{../templates/uh_logo.png}}
 
 % Footer
 \fancyfoot[C]{\small \thepage}
