--- a/backend/latex/templates/general_petition.tex
+++ b/backend/latex/templates/general_petition.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt,letterpaper]{article}
-\usepackage[margin=0.75in]{geometry}
+\usepackage[top=1.2in,bottom=0.75in,left=0.75in,right=0.75in]{geometry}
 \usepackage{graphicx}
 \usepackage{array}
 \usepackage{fancyhdr}
