--- a/backend/latex/templates/general_petition.tex
+++ b/backend/latex/templates/general_petition.tex
@@ -16,9 +16,10 @@
 \pagestyle{fancy}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0.5pt}
+\setlength{\headheight}{50pt}
 \fancyhead[L]{\small GENERAL PETITION}
 \fancyhead[C]{\small University of Houston\\Registration and Academic Records\\(713) 743-1010}
-\fancyhead[R]{\includegraphics[height=0.6in]{../templates/uh_logo.png}}
+\fancyhead[R]{\includegraphics[height=0.5in]{../templates/uh_logo.png}}
 
 % Footer
 \fancyfoot[C]{\small \thepage}
@@ -37,18 +38,20 @@
 \textit{``State law requires that you be informed of the following: (1) with few exceptions, you are entitled on request to be informed about the information the university collects about you by use of this form; (2) under sections 552.021 and 552.023 of the Government Code, you are entitled to receive and review the information; and (3) under section 559.004 of the Government Code, you are entitled to have the university correct information about you that is incorrect''}
 \end{small}
 
-\vspace{0.2in}
+\vspace{0.3in}
 
 % Student Information Section
 \noindent
-\begin{tabularx}{\textwidth}{@{}lX@{}}
-\textbf{Name:} & \underline{{{LAST_NAME}}\hspace{0.5in}{{FIRST_NAME}}\hspace{0.5in}{{MIDDLE_NAME}}\hspace{1in}} \\
-& \small Last \hspace{1.5in} First \hspace{1.5in} Middle \\[0.1in]
-\textbf{My UH\# / HA\#:} & \underline{{{UH_NUMBER}}\hspace{2in}} \textbf{Phone Number:} \underline{{{PHONE_NUMBER}}\hspace{1.5in}} \\[0.1in]
-\textbf{Student Program/Plan} & \underline{{{STUDENT_PROGRAM_PLAN}}\hspace{4in}} \\[0.1in]
-\textbf{Mailing Address:} & \underline{{{MAILING_ADDRESS}}\hspace{4in}} \\[0.1in]
-\textbf{City:} & \underline{{{CITY}}\hspace{1in}} \textbf{State:} \underline{{{STATE}}\hspace{0.5in}} \textbf{ZIP:} \underline{{{ZIP}}\hspace{0.5in}} \textbf{EMAIL:} \underline{{{EMAIL}}\hspace{1in}} \\
-\end{tabularx}
+\begin{tabular}{@{}ll@{}}
+\textbf{Name:} & \underline{{{LAST_NAME}}\hspace{0.3in}} \underline{{{FIRST_NAME}}\hspace{2in}} \\
+& \small Last \hspace{1.2in} First \\[0.15in]
+\textbf{My UH\# / HA\#:} & \underline{{{UH_NUMBER}}\hspace{1.5in}} \\[0.15in]
+\textbf{Phone Number:} & \underline{{{PHONE_NUMBER}}\hspace{1.5in}} \\[0.15in]
+\textbf{Student Program/Plan} & \underline{{{STUDENT_PROGRAM_PLAN}}\hspace{3.5in}} \\[0.15in]
+\textbf{Mailing Address:} & \underline{{{MAILING_ADDRESS}}\hspace{3.5in}} \\[0.15in]
+\textbf{City:} & \underline{{{CITY}}\hspace{1in}} \textbf{State:} \underline{{{STATE}}\hspace{0.3in}} \textbf{ZIP:} \underline{{{ZIP}}\hspace{0.5in}} \\[0.15in]
+\textbf{EMAIL:} & \underline{{{EMAIL}}\hspace{3in}} \\
+\end{tabular}
 
 \vspace{0.15in}
 
