--- a/backend/latex/templates/general_petition.tex
+++ b/backend/latex/templates/general_petition.tex
@@ -43,8 +43,8 @@
 % Student Information Section
 \noindent
 \begin{tabular}{@{}ll@{}}
-\textbf{Name:} & \underline{{{LAST_NAME}}\hspace{0.3in}} \underline{{{FIRST_NAME}}\hspace{2in}} \\
-& \small Last \hspace{1.2in} First \\[0.15in]
+\textbf{Name:} & \underline{{{FIRST_NAME}}\hspace{1.5in}{{LAST_NAME}}\hspace{2in}} \\
+& \small First \hspace{1.8in} Last \\[0.15in]
 \textbf{My UH\# / HA\#:} & \underline{{{UH_NUMBER}}\hspace{1.5in}} \\[0.15in]
 \textbf{Phone Number:} & \underline{{{PHONE_NUMBER}}\hspace{1.5in}} \\[0.15in]
 \textbf{Student Program/Plan} & \underline{{{STUDENT_PROGRAM_PLAN}}\hspace{3.5in}} \\[0.15in]
